# rustdesk

./: Cargo.toml  build.py
.github/workflows/: flutter-build.yml
flutter/android/app/src/main/kotlin/com/carriez/flutter_hbb/: FloatingWindowService.kt
flutter/lib/: common.dart  main.dart
flutter/lib/desktop/pages/: desktop_setting_page.dart
flutter/web/js/src/: connection.ts
flutter/windows/runner/: Runner.rc  main.cpp
libs/hbb_common/src/: config.rs
libs/portable/: Cargo.toml
src/: client.rs  common.rs  core_main.rs  tray.rs  ui.rs
src/hbbs_http/: sync.rs
src/server/: connection.rs
